--- a/users-app/src/main/resources/application.properties
+++ b/users-app/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:dcbapp
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.initialization-mode=always
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=mysecretpassword
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.initialization-mode=always
+spring.sql-init-mode=always
+spring.jpa.defer-datasource-initialization=true
